# sonar-test

./: LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml
src/test_sonar/: __init__.py  test_fib.py
